Ui improvements and bug fixes (#5677)
* PLT-5565 - Fixing theme colors not updating

* PLT-4721 - Removing status ind for system messages

* PLT-5735 - Fixing ellipsis in firefox

* PLT-5010 - Removing extra space in channel modal

* PLT-5584 - Inline image overrning edit textarea

* PLT-5475  - Fixing tutorials on mobile

* PLT-5142 - Disabling poitner events for status

* PLT-5728 - Fixing emoji highlight on hover

--- a/webapp/sass/responsive/_mobile.scss
+++ b/webapp/sass/responsive/_mobile.scss
@@ -9,6 +9,7 @@
 
         .Select-value-label {
             max-width: 190px;
+            text-overflow: ellipsis;
         }
     }
 
@@ -1624,6 +1625,7 @@
                 }
             }
         }
+
         .attachment {
             .attachment__image {
                 &.attachment__image--openraph {
@@ -1637,6 +1639,7 @@
         left: 0;
         position: fixed;
         top: 0;
+        z-index: 9999;
 
         .tutorial__content {
             .tutorial__steps {
